syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mca.models";

message TransferRequest {
  int32 fromAccount = 1;
  int32 toAccount = 2;
  int32 amount = 3;
}

message Account {
  int32 accountNumber = 1;
  int32 amount = 2;
}

enum TransferStatus {
  FAILED = 0;
  SUCCESS = 1;
}

message TransferResponse {
  TransferStatus status = 1;
  repeated Account accounts = 2;
}

service TransferService {
  rpc transfer(stream TransferRequest) returns (stream TransferResponse);
}